--- a/content/分析一.html
+++ b/content/分析一.html
@@ -61,6 +61,6 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='Week1.html'>Week1</a></li></ul><li><a href='零件分析.html'>零件分析</a><ul><li><a href='分析一.html'>分析一</a><li><a href='分析二.html'>分析二</a></li></ul><li><a href='每週進度.html'>每週進度</a></li></ul></nav><section>pelican 網誌 << <a href='pelican 網誌.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>組員操作影片</h1>
-<p>每週各分組組員必須將參與分組協同過程之電腦操作流程錄成影片後, 上傳至各自的 Youtube 帳號區, 並嵌入各分組網站頁面中.</p>
-<br />pelican 網誌 << <a href='pelican 網誌.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='Week1.html'>Week1</a></li></ul><li><a href='零件分析.html'>零件分析</a><ul><li><a href='分析一.html'>分析一</a><li><a href='分析二.html'>分析二</a></li></ul><li><a href='每週進度.html'>每週進度</a></li></ul></nav><section>零件分析 << <a href='零件分析.html'>Previous</a> <a href='分析二.html'>Next</a> >> 分析二<br /><h1>分析一</h1>
+<p></p>
+<br />零件分析 << <a href='零件分析.html'>Previous</a> <a href='分析二.html'>Next</a> >> 分析二</section></div></body></html>
